syntax = "proto3";

package scopeverification;

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";

option go_package = ".;proto";

service ScopeVerification {
  rpc Verify(VerifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/verify"
    };
  }
}

message VerifyRequest {
  string auth_header = 1;
  string method = 2;
  string path = 3;
  string body = 4;
}
